# appctl

./: .dockerignore  .gitignore  .pylintrc  AUTHORS.md  Dockerfile  Jenkinsfile  README  README.md  check-extensions  ci_build  ci_tests  config-example-ros.json  config-example.json  config-ros.json  dev_tests  doc-extensions  jenkins_runner.py  jsdoc.conf.json  pack-debs  pack-extensions  publish-extensions  run-pylint  setup.cfg
appctl/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
appctl/debian/: changelog  control  rules
appctl/scripts/: controller.py  evdev_teleport_switcher.py  mode_spin_test.py  rfreceiver_mode_select.py
appctl/src/appctl_support/: __init__.py  awesome.py  controller.py  mode_handler.py  proc_controller.py  proc_runner.py  window_controller.py
appctl/test/: mode_spin.test  test_mode_spin.py
appctl/test/appctl_support/: test_mode_handler.py  test_proc_controller.py  test_proc_runner.py
appctl_msg_defs/: CHANGELOG.rst  CMakeLists.txt  package.xml
catkin/: .gitignore  startup.sh
catkin/src/appctl/: CMakeLists.txt  README.md  package.xml  setup.py
catkin/src/appctl/debian/: changelog  control
catkin/src/appctl/scripts/: controller.py  evdev_teleport_switcher.py  rfreceiver_mode_select.py
catkin/src/appctl/src/appctl_support/: __init__.py  awesome.py  controller.py  mode_handler.py  proc_controller.py  proc_runner.py  window_controller.py
catkin/src/appctl/srv/: Query.srv
catkin/src/appctl/test/: test_appctl.test
catkin/src/appctl/test/appctl_support/: test_appctl_support.test  test_mode_handler.py  test_proc_controller.py  test_proc_runner.py
catkin/src/browser/: CMakeLists.txt  README.md  package.xml
catkin/src/chrome/: CMakeLists.txt  package.xml
catkin/src/connectivity/: CMakeLists.txt  README.md  package.xml  setup.py
catkin/src/connectivity/debian/: changelog  control  rules
catkin/src/connectivity/scripts/: watchman.py
catkin/src/connectivity/srv/: Online.srv
catkin/src/evdev_teleport/: CMakeLists.txt  README.md  package.xml
catkin/src/fancontrol/: CMakeLists.txt  package.xml
catkin/src/geodata/: CMakeLists.txt  README.md  package.xml
catkin/src/leap_motion/: CMakeLists.txt
catkin/src/maxbotix/: CMakeLists.txt  README.md  package.xml  sender.py
catkin/src/maxbotix/debian/: changelog  control  rules
catkin/src/maxbotix/scripts/: sender.py
catkin/src/mirror/: CMakeLists.txt  README.md  package.xml
catkin/src/occupancy/: CMakeLists.txt  package.xml
catkin/src/onboard/: CMakeLists.txt  README.md  listener.py  package.xml
catkin/src/onboard/debian/: changelog  control  rules
catkin/src/onboard/scripts/: launcher.py  listener.py
catkin/src/onboard/test/: test_onboard.test
catkin/src/onboard/test/onboard_support/: test_onboard.py  test_onboard.test
catkin/src/portal_config/: CMakeLists.txt  README.md  package.xml
catkin/src/portal_leds/: CMakeLists.txt  README.md  package.xml
catkin/src/portal_nav/: CMakeLists.txt  README.md  package.xml
catkin/src/portal_occupancy/: CMakeLists.txt  README.md  package.xml
catkin/src/rfreceiver/: CMakeLists.txt  README.md  package.xml
catkin/src/rfreceiver/debian/: changelog  control  rules
catkin/src/rfreceiver/scripts/: kill_browser.py  sender.py
catkin/src/rfreceiver/test/: test_rfreceiver.test
catkin/src/rfreceiver/test/rfreceiver_support/: test_rfreceiver.py  test_rfreceiver.test
catkin/src/ros_metapackage/: ns-control  ns-control.template
catkin/src/rosbridge/: CMakeLists.txt  manage_ssl.py  openssl.cfg  package.xml  secure_server.py
catkin/src/servertech_pdu/: CMakeLists.txt  package.xml
catkin/src/slinky_nav/: CMakeLists.txt  package.xml
catkin/src/statistics/: CMakeLists.txt  README.md  package.xml  setup.py
ext_shared_libs/: eventemitter2.min.js
extensions/: crxmake
extensions/display/: manifest.json
extensions/display/contentjs/: camera_buffer.js  display_switch.js  fonts.js  glenvironment.js  handoverlay.js  inject.js  portalRosDisplay.js  shaders.js  slinkyRosDisplay.js  spacenav_feedback.js  texture_src.js
extensions/display/css/: acme_display.css
extensions/display/libs/: TweenMax.js  eventemitter2.min.js
extensions/display/models/: arrow.json  center_circle_flat.json  center_dot.json  flap.json  handindex.json  handpalm.json  pop_callout.json  ring.json  ring_0.json  ring_1.json  ring_2.json  top_callout.json  uni-fingertip_tip.json  uni-palm.json
extensions/feedback_arrows/: apply.js  feedback_arrows_threejs.html  manifest.json
extensions/feedback_arrows/css/: feedback_arrows.css
extensions/google_properties_menu/: background.js  doodles_injector.js  google_properties_menu.js  manifest.json
extensions/google_properties_menu/contentjs/: debug.js  doodles.js  doodles_injector.js  google_properties_menu.js  google_properties_menu_error.js  google_properties_menu_item.js
extensions/google_properties_menu/css/: doodles.css  style.css
extensions/google_properties_menu/libs/: jquery-2.1.1.min.js
extensions/google_properties_menu/pages/: debug.html  doodles.html  google_properties.html
extensions/kiosk/: manifest.json
extensions/kiosk/contentjs/: ambient.js  camera_buffer.js  famousPlaces.js  fancontrol.js  (+11 more)
extensions/no_right_click/: apply.js  manifest.json
extensions/onboard/: apply.js  manifest.json  onboard.html  onboard.js  onboard_websocket.html  onboard_websocket.js  popup.html
extensions/pacman/: manifest.json
extensions/render_statistics/: eventemitter2.min.js  init_counter.js  manifest.json  render_statistics.html  render_statistics.js  roslib.min.js  statsd_msg.js
extensions/statistics_sink/: manifest.json  statistics_sink.js
extensions/theremin/: ToneGenerator.js  manifest.json  options.html  options.js  theremin.html  theremin.js
keys/: README
lg_builder/: CHANGELOG.rst
managed_policy_example/: ExtensionInstallForcelist.json  ExtensionInstallSources.json  ExtensionInstallWhitelist.json
scripts/: build.sh  deploy.sh  run_tests.sh
sketches/: README  clearButtonReceiver.ino
tests/: README.md  requirements.txt
tests/doc/: .gitignore  Makefile  run-sphinx.sh
(+127 files in other folders)
