<?xml version="1.0"?>
<package>
  <name>maxbotix</name>
  <version>1.0.1</version>
  <description>Driver for maxbotix proximity sensor</description>

  <maintainer email="lg@endpoint.com">End Point Corp</maintainer>

  <author email="matt@endpoint.com">Matt Vollrath</author>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>
