<?xml version="1.0"?>
<package>
  <name>onboard</name>
  <version>0.0.1</version>
  <description>Onboard keyboard show/hide control</description>

  <maintainer email="lg@endpoint.com">End Point Corp</maintainer>

  <license>Apache 2.0</license>

  <author email="matt@endpoint.com">Matt Vollrath</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>

  <export>
  </export>
</package>
